update php to 8.2 update mariadb to 10.11.2

--- a/mariadb/Dockerfile
+++ b/mariadb/Dockerfile
@@ -4,5 +4,7 @@ ARG IMAGE_TAG
 
 FROM ${IMAGE_NAME}:${IMAGE_TAG}
 
-RUN apt-get update \
-  && apt-get upgrade --assume-yes
+# RUN apt-get update \
+#  && apt-get upgrade --assume-yes
+#
+# CMD ["mariadbd"]
