new php base image v2 using socket

--- a/php-port/Dockerfile
+++ b/php-port/Dockerfile
@@ -21,7 +21,7 @@ ENV BUILD_DEPS \
     bzip2-dev \
     yaml-dev
 
-ENV APK_ADD_NO_CACHE \
+ENV APK_ADD \
     acl \
     icu-libs \
     freetype \
@@ -51,7 +51,7 @@ ENV PHP_EXT_INSTALL \
     xml
 
 RUN apk --no-cache --virtual .build-deps add ${BUILD_DEPS} \
-    && apk add --update --no-cache ${APK_ADD_NO_CACHE} \
+    && apk add --update --no-cache ${APK_ADD} \
     && apk upgrade --available \
     && pecl install ${PECL_INSTALL} \
     && docker-php-ext-enable ${PHP_EXT_ENABLE} \
@@ -60,71 +60,54 @@ RUN apk --no-cache --virtual .build-deps add ${BUILD_DEPS} \
 # cleaning
     && apk del --purge .build-deps \
     && apk add --update dumb-init fcgi \
-    && rm -rf /var/cache/apk/* /tmp/* /var/tmp/* /usr/share/doc/* /usr/share/man/* \
-# php-config
-    && mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
+    && rm -rf /var/cache/apk/* /tmp/* /var/tmp/* /usr/share/doc/* /usr/share/man/*
+
+RUN cp "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
 
 #
-# folder configs
+# copy liveness script to image and change permissions
 #
-ENV PHP_FPM_DIR="/usr/local/etc/php-fpm.d"
-ENV BIN_DIR="/usr/local/bin"
+# COPY "./scripts/liveness_probe.sh" "/usr/local/bin/"
+# RUN chmod -R 755 "/usr/local/bin/liveness_probe.sh"
+
 #
 # configure PHP
 #
-# php-conf/[opcache]
+ENV PHP_FPM_INI_DIR="/usr/local/etc/php-fpm.d"
+# php-conf/[opcache] defaults
 ENV PHP_OPCACHE_REVALIDATE_FREQUENCY="0"
 ENV PHP_OPCACHE_VALIDATE_TIMESTAMPS="0"
+# php-conf/[opcache] production
 ENV PHP_OPCACHE_ENABLE="1"
 ENV PHP_OPCACHE_MEMORY_CONSUMPTION="64"
 ENV PHP_OPCACHE_MAX_ACCELERATED_FILES="2000"
-ENV PHP_OPCACHE_PRELOAD=""
-# ENV PHP_OPCACHE_PRELOAD="/app/config/preload.php"
-COPY conf.d/zzz_200_opcache.ini $PHP_INI_DIR/conf.d/zzz_200_opcache.ini
-
-# php-conf/[PHP]
+ENV PHP_OPCACHE_PRELOAD="/app/config/preload.php"
+# php-conf/[PHP] defaults
 ENV PHP_POST_MAX_SIZE="16M"
 ENV PHP_UPLOAD_MAX_FILESIZE="16M"
+# php-conf/[PHP] production
 ENV PHP_MAX_EXECUTION_TIME="90"
 ENV PHP_REALPATH_CACHE_TTL="120"
-COPY conf.d/zzz_201_php.ini $PHP_INI_DIR/conf.d/zzz_201_php.ini
-
 # fpm-conf/[global] default
 ENV PHP_FPM_LOG_LEVEL="notice"
 ENV PHP_FPM_EMERGENCY_RESTART_THRESHOLD="10"
 ENV PHP_FPM_EMERGENCY_RESTART_INTERVAL="10s"
 ENV PHP_FPM_PROCESS_CONTROL_TIMEOUT="20s"
-COPY php-fpm.d/zzz_100_global.conf $PHP_FPM_DIR/zzz_100_global.conf
-
 # fpm-conf/[www]
 ENV PHP_FPM_USER="www-data"
-ENV PHP_FPM_GROUP="www-data"
-COPY php-fpm.d/zzz_200_www.conf $PHP_FPM_DIR/zzz_200_www.conf
-
-ENV PHP_FPM_LISTEN_DIR="/var/run/php"
-ENV PHP_FPM_LISTEN_FILE="php-fpm.sock"
-ENV PHP_FPM_LISTEN="$PHP_FPM_LISTEN_DIR/$PHP_FPM_LISTEN_FILE"
-COPY php-fpm.d/zzz_200_www_listen.conf $PHP_FPM_DIR/zzz_200_www_listen.conf
-# create SOCKET directory
-RUN mkdir -p $PHP_FPM_LISTEN_DIR
-
-ENV PHP_FPM_LOG="%R - %t \"%m %r%Q%q\" %s len=%l %f dur=%{mili}dms mem=%{kilo}Mk cpu=%C%%"
-COPY php-fpm.d/zzz_200_www_log.conf $PHP_FPM_DIR/zzz_200_www_log.conf
-
 ENV PHP_FPM_PM="dynamic"
 ENV PHP_FPM_MAX_CHILDREN="5"
 ENV PHP_FPM_START_SERVERS="2"
 ENV PHP_FPM_MIN_SPARE_SERVERS="1"
 ENV PHP_FPM_MAX_SPARE_SERVERS="2"
 ENV PHP_FPM_MAX_REQUESTS="1000"
-COPY php-fpm.d/zzz_200_www_pm.conf $PHP_FPM_DIR/zzz_200_www_pm.conf
 
-# health-check
-COPY script/docker-healthcheck.sh $BIN_DIR/docker-healthcheck
-RUN chmod +x $BIN_DIR/docker-healthcheck
-
-# TODO: has to be verified
-# HEALTHCHECK --interval=10s --timeout=3s --retries=3 CMD ["docker-healthcheck"]
+#
+# add the configuration files
+#
+COPY php-conf/*.ini $PHP_INI_DIR/conf.d/
+ENV PHP_FPM_INI_DIR="/usr/local/etc/php-fpm.d"
+COPY fpm-conf/*.conf ${PHP_FPM_INI_DIR}/
 
 CMD [ "php-fpm", "--allow-to-run-as-root" ]
 
@@ -138,7 +121,6 @@ ENV APK_ADD \
 
 FROM production as xdebug
 
-ENV APP_ENV=dev XDEBUG_MODE=off
 ARG XDEBUG_VERSION
 
 #
@@ -154,22 +136,27 @@ RUN apk add --no-cache --virtual .build-deps $PHPIZE_DEPS \
     && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer \
 # cleaning
     && rm -rf /tmp/* \
-    && apk del -f .build-deps \
-# php-config
-	&& mv "$PHP_INI_DIR/php.ini" "$PHP_INI_DIR/php.ini-production" \
-	&& mv "$PHP_INI_DIR/php.ini-development" "$PHP_INI_DIR/php.ini"
+    && apk del -f .build-deps
+
+RUN cp "$PHP_INI_DIR/php.ini-development" "$PHP_INI_DIR/php.ini"
 
 #
 # configure local PHP
 #
-# php-conf/[opcache]
+# php-conf/[opcache] local overwrites
 ENV PHP_OPCACHE_ENABLE="0"
 ENV PHP_OPCACHE_MEMORY_CONSUMPTION="256"
 ENV PHP_OPCACHE_MAX_ACCELERATED_FILES="2000"
 ENV PHP_OPCACHE_PRELOAD=""
-COPY conf.d/zzz_200_opcache.ini $PHP_INI_DIR/conf.d/zzz_200_opcache.ini
-
-# php-conf/[PHP]
+# php-conf/[PHP] local overwrites
 ENV PHP_MAX_EXECUTION_TIME="3600"
 ENV PHP_REALPATH_CACHE_TTL="600"
-COPY conf.d/zzz_201_php.ini $PHP_INI_DIR/conf.d/zzz_201_php.ini
+
+#
+# add the configuration files
+#
+COPY php-conf/*.ini $PHP_INI_DIR/conf.d/
+ENV PHP_FPM_INI_DIR="/usr/local/etc/php-fpm.d"
+COPY fpm-conf/*.conf ${PHP_FPM_INI_DIR}/
+
+CMD [ "php-fpm", "--allow-to-run-as-root" ]
