--- a/examples/nginx-fpm-socket/php/.deploy/Dockerfile
+++ b/examples/nginx-fpm-socket/php/.deploy/Dockerfile
@@ -1,9 +1,14 @@
 ARG IMAGE_NAME
 ARG IMAGE_TAG
 
-FROM ${IMAGE_NAME}:${IMAGE_TAG}-xdebug
-
-ARG APP_ENV
-ARG WORK_DIR
+FROM ${IMAGE_NAME}:${IMAGE_TAG}-xdebug as dev
+ARG APP_ENV=dev
 ENV APP_ENV=${APP_ENV}
-WORKDIR ${WORK_DIR}
+
+ENTRYPOINT ["docker-entrypoint"]
+CMD ["php-fpm"]
+
+FROM ${IMAGE_NAME}:${IMAGE_TAG} as production
+
+ENTRYPOINT ["docker-entrypoint"]
+CMD ["php-fpm"]
