--- a/examples/nginx-fpm-socket/webserver/.deploy/templates/default.conf.template
+++ b/examples/nginx-fpm-socket/webserver/.deploy/templates/default.conf.template
@@ -1,46 +1,39 @@
     #
-    # www
+    # in default, if no better server_name matches found
     #
     server {
+        listen [::]:80 default_server;
+        listen 80 default_server;
+        return 403;
+    }
+
+    #
+    # www, static files
+    #
+    server {
+        listen [::]:80;
         listen 80;
-        server_name ${SUB_DOMAIN_FRONTEND}.${APP_DOMAIN};
 
-        location / {
-        # a resovler definition is needed!
-        # because we use Docker, we have to use the internal Docker DNS resolver IP which is 127.0.0.11.
-        # (notice)the internal AWS DNS resolver IP is your AWS VPC network range plus two.
-        # To further remove the downtime, reduce the resolve cache time to 10 seconds instead of the default 5 minutes.
-            resolver 127.0.0.11 ipv6=off;
-            proxy_pass http://frontend:5173;
+        server_name ${WWW_SUB_DOMAIN}.${BASE_DOMAIN};
 
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
+        error_log  /var/log/nginx/${WWW_SUB_DOMAIN}.${BASE_DOMAIN}.error.log;
+        access_log /var/log/nginx/${WWW_SUB_DOMAIN}.${BASE_DOMAIN}.access.log;
+
+        root /var/html/www;
+
+        include /etc/nginx/shared/assets-html.conf;
+        include /etc/nginx/shared/assets-media.conf;
     }
 
     #
     # php
     #
     upstream _php {
-        server unix:/sockets/php;
+        server unix:${API_SOCKET};
     }
     server {
         listen 80;
-        server_name ${SUB_DOMAIN_BACKEND}.${APP_DOMAIN};
-
-        ###############################################################
-        # serve static files (images,js) directly
-        location ~* ^.+.(jpg|jpeg|gif|css|png|js|ico|txt|md|doc|pdf|ico)$ {
-            root /var/html/api;
-            access_log      off;
-            # expires 30d;
-        }
-
-        location ~* ^.+.(html)$ {
-            root /var/html/api;
-            access_log      off;
-        }
+        server_name ${API_SUB_DOMAIN}.${BASE_DOMAIN};
 
         location / {
             root /var/html/api;
@@ -48,14 +41,11 @@
             try_files $uri /index.php$is_args$args;
         }
 
-        ###############################################################
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.11:9000
-        #
         location ~ ^/index\.php(/|$) {
             # cross origin section
             # allow cross origin for all http_origins from same DOMAIN
             set $cors "";
-            if ($http_origin ~* (.*\.${APP_DOMAIN})) {
+            if ($http_origin ~* (.*\.${BASE_DOMAIN})) {
                 set $cors "true";
             }
             if ($cors = "true") {
@@ -75,28 +65,10 @@
             fastcgi_buffers 8 16k;
 
             fastcgi_index index.php;
-            ###############################################################
-            # PHP-FPM is configured to listen on a TCP/IP socket
-            # [www] listen = "0.0.0.0:9000"
-            # resolver 127.0.0.11 ipv6=off;
-            # fastcgi_pass php:9000;
-            ###############################################################
-            # PHP-FPM is configured to listen on a UNIX domain socket
-            # [www] listen = ".../php-fpm.sock"
-            # resolver 127.0.0.11 ipv6=off;
             fastcgi_pass _php;
 
             include fastcgi_params;
 
-            # When you are using symlinks to link the document root to the
-            # current version of your application, you should pass the real
-            # application path instead of the path to the symlink to PHP
-            # FPM.
-            # Otherwise, PHP's OPcache may not properly detect changes to
-            # your PHP files (see https://github.com/zendtech/ZendOptimizerPlus/issues/126
-            # for more information).
-            # fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-            # fastcgi_param DOCUMENT_ROOT $realpath_root;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             fastcgi_param HTTP_X_REQUEST_ID $request_id;
 
