--- a/examples/nginx/webserver/.deploy/templates/default.conf.template
+++ b/examples/nginx/webserver/.deploy/templates/default.conf.template
@@ -1,4 +1,17 @@
+    #
+    # in default, if no better server_name matches found
+    #
     server {
+        listen [::]:80 default_server;
+        listen 80 default_server;
+        return 403;
+    }
+
+    #
+    # e.g. server_name www.dev.webfux.io;
+    #
+    server {
+        listen [::]:80;
         listen 80;
 
         server_name ${WWW_SUB_DOMAIN}.${BASE_DOMAIN};
