--- a/examples/nginx/webserver/.deploy/Dockerfile
+++ b/examples/nginx/webserver/.deploy/Dockerfile
@@ -1,13 +1,26 @@
 ARG IMAGE_NAME
 ARG IMAGE_TAG
 
+# ##############################################
+# dev
+#
 FROM ${IMAGE_NAME}:${IMAGE_TAG} as dev
-ARG APP_ENV=dev
-ENV APP_ENV=${APP_ENV}
+ENV WORK_DIR=/var/html/www
+ENV TZ=Europe/Vienna
 
-FROM dev as production
+WORKDIR $WORK_DIR
+
+# ##############################################
+# production
+#
+FROM ${IMAGE_NAME}:${IMAGE_TAG} as production
+ENV WORK_DIR=/var/html/www
+ENV NGINX_TEMPLATES=/etc/nginx/templates
+ENV TZ=Europe/Vienna
+
+WORKDIR $WORK_DIR
+
 # copy source (in docker-compose /build/context: ./webserver)
-COPY public /var/html/www
-
+COPY ./public $WORK_DIR
 # copy nginx directive (in docker-compose /build/context: ./webserver)
-COPY .deploy/templates /etc/nginx/templates/
+COPY ./.deploy/templates $NGINX_TEMPLATES
