--- a/examples/nginx-fpm-socket/webserver/.deploy/Dockerfile
+++ b/examples/nginx-fpm-socket/webserver/.deploy/Dockerfile
@@ -7,11 +7,10 @@ ARG IMAGE_TAG
 FROM ${IMAGE_NAME}:${IMAGE_TAG} as dev
 ENV WORK_DIR=/var/html/www
 ENV TZ=Europe/Vienna
-
 WORKDIR $WORK_DIR
 
-# run 99-unix-socket-user
-RUN bash -c /docker-entrypoint.t/99-unix-socket-user.sh
+COPY .deploy/docker-healthcheck.sh /
+RUN chmod +x -R /docker-healthcheck.sh
 
 # ##############################################
 # production
@@ -20,7 +19,6 @@ FROM dev as production
 ENV WORK_DIR=/var/html/www
 ENV NGINX_TEMPLATE_DIR=/etc/nginx/templates
 ENV TZ=Europe/Vienna
-
 WORKDIR $WORK_DIR
 
 # copy source (in docker-compose /build/context: ./webserver)
