--- a/examples/nginx/webserver/.deploy/templates/default.conf.template
+++ b/examples/nginx/webserver/.deploy/templates/default.conf.template
@@ -14,10 +14,10 @@
         listen [::]:80;
         listen 80;
 
-        server_name ${WWW_SUB_DOMAIN}.${BASE_DOMAIN};
+        server_name ${WEBSERVER_SUB_DOMAIN}.${DOMAIN};
 
-        error_log  /var/log/nginx/${WWW_SUB_DOMAIN}.${BASE_DOMAIN}.error.log;
-        access_log /var/log/nginx/${WWW_SUB_DOMAIN}.${BASE_DOMAIN}.access.log;
+        error_log  /var/log/nginx/${WEBSERVER_SUB_DOMAIN}.${DOMAIN}.error.log;
+        access_log /var/log/nginx/${WEBSERVER_SUB_DOMAIN}.${DOMAIN}.access.log;
 
         root /var/html/www;
 
