harmonize base images (php + nginx) to use - docker-entrypoint.sh - docker-healthcheck.sh - .bashrc (for logging) updated related examples updated base images (php + nginx) README.md

--- a/examples/nginx-fpm-socket/webserver/.deploy/Dockerfile
+++ b/examples/nginx-fpm-socket/webserver/.deploy/Dockerfile
@@ -9,8 +9,8 @@ ENV WORK_DIR=/var/html/www
 ENV TZ=Europe/Vienna
 WORKDIR $WORK_DIR
 
-COPY .deploy/docker-healthcheck.sh /
-RUN chmod +x -R /docker-healthcheck.sh
+# docker-entrypoint
+RUN cp /docker-entrypoint.t/00-unix-socket-user.sh /docker-entrypoint.d
 
 # ##############################################
 # production
