--- a/examples/nginx-fpm-socket/docker-compose.yml
+++ b/examples/nginx-fpm-socket/docker-compose.yml
@@ -35,9 +35,9 @@ services:
       - WEBSERVER_SUB_DOMAIN=www.dev
       - APP_SUB_DOMAIN=api.dev
       - APP_SOCKET=/socket/app.sock
-    depends_on:
-      app:
-        condition: service_healthy
+#    depends_on:
+#      app:
+#        condition: service_healthy
     volumes:
       - sockets:/socket
 
