--- a/examples/nginx-fpm-socket/php/.deploy/Dockerfile
+++ b/examples/nginx-fpm-socket/php/.deploy/Dockerfile
@@ -9,12 +9,12 @@ ENV WORK_DIR=/var/app
 ENV TZ=Europe/Vienna
 WORKDIR $WORK_DIR
 
-# ENV PHP_COMPOSER_CACHE_DIR=$WORK_DIR/.cache/composer
-# ENV PHP_COMPOSER_INSTALL_ARGUMENTS="--no-interaction --prefer-dist"
-# COPY .deploy/docker-entrypoint.d/100-php-composer-install.sh $PHP_BIN_DIR/docker-entrypoint.d/
+# docker-entrypoint
+RUN cp $PHP_BIN_DIR/docker-entrypoint.t/00-unix-socket-user.sh $PHP_BIN_DIR/docker-entrypoint.d
 
-# health-check
-HEALTHCHECK --interval=5s --timeout=1s CMD $BIN_DIR/docker-healthcheck || exit 1
+# docker-healthcheck
+# RUN cp $PHP_BIN_DIR/docker-healthcheck.t/00-fpm-socket.sh $PHP_BIN_DIR/docker-healthcheck.d
+# HEALTHCHECK --interval=5s --timeout=1s CMD $PHP_BIN_DIR/docker-healthcheck || exit 1
 
 ENTRYPOINT ["docker-entrypoint"]
 CMD ["php-fpm"]
