--- a/examples/nginx-php-db/php/php-fpm.d/zzz_200_www.conf
+++ b/examples/nginx-php-db/php/php-fpm.d/zzz_200_www.conf
@@ -5,10 +5,8 @@ group = ${PHP_FPM_GROUP}
 ; decorate_workers_output = no
 
 ; don't clear environment of workers
-clear_env = no
+clear_env = yes
 
 ; Ensure worker stdout and stderr are sent to the main error log.
 catch_workers_output = yes
 decorate_workers_output = no
-
-env["LUKAS"] = yes
